Bug 1641578: Avoid crashing when Recorded surface or font storage fail to allocate. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D77271